apps/production/vaultwarden/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik

  infrastructure:
    labels:
      bgp-advertise: "true"

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: vaultwarden.tmatthews.casa
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              app.kubernetes.io/part-of: vaultwarden

    - name: https
      protocol: HTTPS
      port: 443
      hostname: vaultwarden.tmatthews.casa
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tmatthews-casa-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              app.kubernetes.io/part-of: vaultwarden
