apps/production/vaultwarden/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-vaultwarden
  namespace: vaultwarden # Any namespace works
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`://example.com`)
    kind: Rule
    services:
    - name: api-service
      port: 80
  tls: {} # Keep this empty. Traefik automatically applies the default TLSStore.
